test/lit/pto/tile_layout_verify_row_major_nonebox_invalid.pto
// RUN: not ptoas %s 2>&1 | FileCheck %s

module {
  func.func @bad_row_major_nonebox() {
    %tile = pto.alloc_tile : !pto.tile_buf<loc=vec, dtype=f32, rows=2, cols=7, v_row=2, v_col=7, blayout=row_major, slayout=none_box, fractal=512, pad=0>
    return
  }
}

// CHECK: error: 'pto.alloc_tile' op expects result row-major none_box tile row byte size (cols * sizeof(dtype)) to be 32-byte aligned, but got 28 bytes
